package Adoter.Asset;

message InnerMeta {
	optional INNER_TYPE type_t = 1;
	optional bytes stuff = 2;
}

/////////////////////////////////////////////////////
//服务器之间通用协议类型
/////////////////////////////////////////////////////
enum INNER_TYPE {
	INNER_TYPE_BEGIN = 0; //开始协议
	INNER_TYPE_REGISTER = 1; //注册服务器
	INNER_TYPE_COMMAND = 2; //GMT指令
	INNER_TYPE_OPEN_ROOM = 3; //代开房间
	INNER_TYPE_COUNT = 100; //协议最大数量
}

//操作类型
enum COMMAND_TYPE {
	COMMAND_TYPE_BEGIN = 0; 
	COMMAND_TYPE_RECHARGE = 1; //充值钻石
	COMMAND_TYPE_ROOM_CARD = 2; //房卡
	COMMAND_TYPE_HUANLEDOU = 3; //欢乐豆
}

enum COMMAND_ERROR_CODE {
	COMMAND_ERROR_CODE_SUCCESS = 0; //成功
	COMMAND_ERROR_CODE_NO_PERMISSION = 1; //没有权限
	COMMAND_ERROR_CODE_PARA = 2; //参数错误
	COMMAND_ERROR_CODE_NO_ACCOUNT = 3; //没有账号数据
	COMMAND_ERROR_CODE_NO_PLAYER = 4; //没有玩家数据(即账号存在，但账号下无该角色数据)
	COMMAND_ERROR_CODE_PLAYER_ONLINE = 5; //玩家在线
	COMMAND_ERROR_CODE_PLAYER_OFFLINE = 6; //玩家离线
	COMMAND_ERROR_CODE_ITEM_NOT_FOUND = 7; //物品未能找到
}

enum SERVER_TYPE {
	SERVER_TYPE_BEGIN = 0;
	SERVER_TYPE_GMT = 1; //GMT服务器
	SERVER_TYPE_GAME = 2; //游戏服务器
}

//注册服务器
message Register {
	optional INNER_TYPE type_t = 1 [default = INNER_TYPE_REGISTER];
	optional SERVER_TYPE server_type = 2; //服务器类型
	optional int64 server_id = 3; //服务器ID
}

//GMT指令
message Command {
	optional INNER_TYPE type_t = 1 [default = INNER_TYPE_COMMAND];
	optional COMMAND_TYPE command_type = 2; //操作类型
	optional COMMAND_ERROR_CODE error_code = 3; //返回码

	optional bytes account = 4; //账号
	optional int64 player_id = 5; //玩家角色ID
	optional int64 item_id = 6; //如果是物品，物品ID(房卡是特殊物品)
	optional int32 count = 7; //数量(根据COMMAND_TYPE有不同的意义)
}

//代开房间
message OpenRoom {
	optional INNER_TYPE type_t = 1 [default = INNER_TYPE_OPEN_ROOM];
	optional int64 server_id = 2 [default = 1]; //服务器ID
	optional int64 room_id = 3; //房间ID，如果非0则证明开放成功
}
